Bug #9334 PS API queries in log file
Submitted: 22 Mar 2005 11:42 Modified: 22 Jun 2005 2:12
Reporter: Vadim Tkachenko
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:4.1.10a OS:Linux (RedHat AS 3.0)
Assigned to: Konstantin Osipov Target Version:

[22 Mar 2005 11:42] Vadim Tkachenko
Description:
I tried debug my queries (application uses PS API) via log file,
but log file contains only prepared statements without arguments:

SELECT c from sbtest where id=?

I think, this info isn't very useful for debugging, and log file should contain also
arguments for query.

How to repeat:
run mysqld with --log=logfile.txt
run application with PS API (sysbench for example).
see logfile.txt
[11 Jun 2005 10:46] Konstantin Osipov
Subject: bk commit - 4.1 tree (konstantin:1.2291) BUG#8367
ChangeSet
  1.2291 05/06/11 00:16:02 konstantin@mysql.com +5 -0
  Fix Bug#9334 "PS API queries in log file" and
  Bug#8367 "low log doesn't gives complete information about prepared
  statements"
  Implement status variables for prepared statements commands (a port of
  the patch by Andrey Hristov).
  See details in comments to the changed files.
[16 Jun 2005 22:52] Konstantin Osipov
Pushed into 4.1 tree currently tagged 4.1.13 and merged into 5.0 (5.0.8)
[22 Jun 2005 2:12] Mike Hillyer
Documented in 4.1.13 and 5.0.8 changelogs:

<listitem><para>Expanded on information provided in general log and slow query log for
prepared statements. (Bug #8367, Bug #9334)</para></listitem>